--- a/google-idx/xray-config-example.json
+++ b/google-idx/xray-config-example.json
@@ -5,6 +5,7 @@
       "port": 8080,
       "protocol": "vless",
       "settings": {
+        "decryption": "none",
         "clients": [
           {
             "flow": "",
